--- a/templates/layout.html
+++ b/templates/layout.html
@@ -105,9 +105,10 @@
       <div class="row">
         <div class="col">
           <h1 class="logo">Heros supplements</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <p>Your satisfaction is our guarantee. Shop with confidence, 
+              knowing that every product we offer is crafted with care and supported by our commitment to your success. 
+              Join our community of fitness enthusiasts today and experience the difference with Us. 
+              Your body, your goals, our supplements.</p>
         </div>
         <div class="col">
           <h3>Office <div class="underline"><span></span></div></h3>
